# data-preprocessing

./: .gitignore  CMakeLists.txt  README.md  run.sh
inc/: infoBaseDatos.h  utilidades.h
res/: README.md
src/: DIGITS_KDEF.cpp  DIGITS_yalefaces.cpp  infoBaseDatos.cpp  kdef.cpp  kdef_db.cpp  utilidades.cpp  yalefaces.cpp  yalefaces_db.cpp
